--- a/app/apps/main/templates/melding/melding_detail.html
+++ b/app/apps/main/templates/melding/melding_detail.html
@@ -45,7 +45,7 @@
                 {% if melding.uuid %}
                     <div class="page__detail">
                         <div>
-                            <a href="{% url 'melding_lijst' %}?{{ overview_querystring }}"
+                            <a href="{% url 'melding_lijst' %}"
                                data-turbo-action='advance'
                                class="link--back">
                                 <svg width="25"
