--- a/app/apps/context/templates/benc/melding_detail_acties.html
+++ b/app/apps/context/templates/benc/melding_detail_acties.html
@@ -11,7 +11,8 @@
             <button type="button"
                     class="btn btn-{% if melding.status.naam == 'controle' %}tertiary{% else %}action{% endif %}"
                     data-action="modal#openModal"
-                    data-modal-action-param="{% url 'taken_aanmaken' melding.uuid %}">
+                    data-modal-action-param="{% url 'taken_aanmaken' melding.uuid %}"
+                    data-modal-css-class-param="modal-dialog--wide modal--multistep-form">
                 <span>Taken aanmaken</span>
             </button>
         {% endif %}
