Fix focus-trap in all modals

--- a/app/apps/main/templates/snippets/modal_template.html
+++ b/app/apps/main/templates/snippets/modal_template.html
@@ -1,4 +1,4 @@
-<div data-modal-target="modal">
+<div data-modal-target="modal" data-focus-trap-target="branch">
     <template data-modal-target="template">
         <dialog data-modal-target="dialog">
             <button id="modal_close_button"
