Fix select2 in dialog, addressresultlist in locatie_aanpassen in dialog

--- a/app/apps/main/templates/melding/melding_actie_form.html
+++ b/app/apps/main/templates/melding/melding_actie_form.html
@@ -1,1 +1,1 @@
-<turbo-frame id="melding_actie_form">&nbsp;</turbo-frame>
+<turbo-frame id="melding_actie_form" class="turboframe-container" data-modal-target="turboActionModal">&nbsp;</turbo-frame>
