--- a/app/apps/main/templates/snippets/modal_template.html
+++ b/app/apps/main/templates/snippets/modal_template.html
@@ -1,6 +1,6 @@
 <div data-modal-target="modal" data-focus-trap-target="branch">
     <template data-modal-target="template">
-        <dialog data-modal-target="dialog">
+        <dialog data-modal-target="dialog" id="dialogGeneral">
             <button id="modal_close_button"
                     type="button"
                     class="btn-close"
