Debugging change in size dialog Locatie aanpassen

--- a/app/frontend/assets/styles/components/_modal.scss
+++ b/app/frontend/assets/styles/components/_modal.scss
@@ -8,6 +8,7 @@ dialog {
     opacity: 0;
     box-shadow: 0 0 0 100vw rgba(0, 0, 0, 0);
     overflow: auto;
+    box-sizing: border-box;
     transition:
         box-shadow $transition-duration-default $transition-ease-default,
         opacity $transition-duration-default $transition-ease-default;
