Styling lichtmasten on detailpage

--- a/app/frontend/assets/styles/app.scss
+++ b/app/frontend/assets/styles/app.scss
@@ -28,3 +28,4 @@
 @import "./components/change-location";
 @import "./components/dashboard";
 @import "./components/sidesheet";
+@import "./components/details-list-with-map";
