--- a/app/apps/main/templates/locatie/lichtmast.html
+++ b/app/apps/main/templates/locatie/lichtmast.html
@@ -1,22 +1,30 @@
 {% load json_encode from json_tags %}
 <turbo-frame id="lichtmast_{{ view.kwargs.lichtmast_id }}">
 <dl>
-    <dt>{{ lichtmast_data.lichtpuntnummer.label }}</dt>
-    <dd>
-        {{ lichtmast_data.lichtpuntnummer.value }}
-    </dd>
-    <dt>{{ lichtmast_data.lichtpunt_id.label }}</dt>
-    <dd>
-        {{ lichtmast_data.lichtpunt_id.value }}
-    </dd>
-    <dt>{{ lichtmast_data.mast_id.label }}</dt>
-    <dd>
-        {{ lichtmast_data.mast_id.value }}
-    </dd>
-    <dt>{{ lichtmast_data.straat.label }}</dt>
-    <dd>
-        {{ lichtmast_data.straat.value }}
-    </dd>
+    <div>
+        <dt>{{ lichtmast_data.lichtpuntnummer.label }}</dt>
+        <dd>
+            {{ lichtmast_data.lichtpuntnummer.value }}
+        </dd>
+    </div>
+    <div>
+        <dt>{{ lichtmast_data.lichtpunt_id.label }}</dt>
+        <dd>
+            {{ lichtmast_data.lichtpunt_id.value }}
+        </dd>
+    </div>
+    <div>
+        <dt>{{ lichtmast_data.mast_id.label }}</dt>
+        <dd>
+            {{ lichtmast_data.mast_id.value }}
+        </dd>
+    </div>
+    <div>
+        <dt>{{ lichtmast_data.straat.label }}</dt>
+        <dd>
+            {{ lichtmast_data.straat.value }}
+        </dd>
+    </div>
 </dl>
 <div data-map-target="pin"
      data-popup-content="Test content"
