--- a/app/apps/main/templates/melding/melding_detail_locaties_lichtmasten.html
+++ b/app/apps/main/templates/melding/melding_detail_locaties_lichtmasten.html
@@ -2,10 +2,10 @@
     <div data-controller="map"
          data-map-default-lat-lon="[51.924420, 4.477750]">
         <h4>Lichtmasten({{ lichtmasten|length }})</h4>
-        <ul>
-            {% for lichtmast in lichtmasten %}
-                <li>
-                    <div class="display--flex--md">
+        <div class="container__details-list-with-map">
+            <ul class="list-clean">
+                {% for lichtmast in lichtmasten %}
+                    <li>
                         <details>
                             <summary>
                                 <h5>Lichtmast {{ lichtmast.lichtmast_id }}</h5>
@@ -13,14 +13,14 @@
                             <turbo-frame src="{% url 'lichtmast' lichtmast.lichtmast_id %}" id="lichtmast_{{ lichtmast.lichtmast_id }}">
                             </turbo-frame>
                         </details>
+                    </li>
+                {% endfor %}
+            </ul>
+            <div class="container__map full-width">
+                <div class="map" data-map-target="tiles">
+                    <div class="map__overlay">
+                        <span>Gebruik twee vingers om de kaart te verplaatsen</span>
                     </div>
-                </li>
-            {% endfor %}
-        </ul>
-        <div class="container__map full-width">
-            <div class="map" data-map-target="tiles">
-                <div class="map__overlay">
-                    <span>Gebruik twee vingers om de kaart te verplaatsen</span>
                 </div>
             </div>
         </div>
