--- a/app/frontend/assets/styles/components/_details-list-with-map.scss
+++ b/app/frontend/assets/styles/components/_details-list-with-map.scss
@@ -8,6 +8,7 @@
     }
 
     > ul {
+        margin-top: 0;
         li {
             border-bottom: 1px solid $blue-200;
             // padding: 0.75rem;
