--- a/app/apps/main/templates/melding/melding_detail_locaties_lichtmasten.html
+++ b/app/apps/main/templates/melding/melding_detail_locaties_lichtmasten.html
@@ -16,7 +16,7 @@
                     </li>
                 {% endfor %}
             </ul>
-            <div class="container__map full-width">
+            <div class="container__map">
                 <div class="map" data-map-target="tiles">
                     <div class="map__overlay">
                         <span>Gebruik twee vingers om de kaart te verplaatsen</span>
