Lichtmasten: Stylingfixes, hide toggle for all lichtmasten on map

--- a/app/apps/main/templates/melding/melding_detail_locaties_lichtmasten.html
+++ b/app/apps/main/templates/melding/melding_detail_locaties_lichtmasten.html
@@ -2,6 +2,19 @@
     <div data-controller="map"
          data-map-default-lat-lon="[51.924420, 4.477750]">
         <h4>Lichtmasten({{ lichtmasten|length }})</h4>
+        {% comment %} <div>
+            <label for="lichtmasten_id">
+                <input id="lichtmasten_id" type="checkbox" data-detail-map-layer-types-param='["lichtmasten", "lichtmastenSto"]' data-action="detail#onMapLayerChange">
+                Toon lichtmasten
+            </label>
+            <div class="container__uitklapper">
+                <span>{% include "icons/info.svg" %}</span>
+                <div class="legenda">
+                    <ul class="list-clean">
+                    </ul>
+                </div>
+            </div>
+        </div> {% endcomment %}
         <div class="container__details-list-with-map">
             <ul class="list-clean">
                 {% for lichtmast in lichtmasten %}
