--- a/app/frontend/assets/styles/components/_details-list-with-map.scss
+++ b/app/frontend/assets/styles/components/_details-list-with-map.scss
@@ -15,7 +15,8 @@
             border-bottom: 1px solid $blue-200;
             // padding: 0.75rem;
             h5 {
-                margin: 0.75rem 0;
+                padding: 0.75rem 0;
+                margin: 0;
             }
             dl {
                 margin: 0;
