--- a/app/apps/main/templates/base.html
+++ b/app/apps/main/templates/base.html
@@ -75,7 +75,7 @@
         </script>
     </head>
     <body class="{% block body_class %}{% endblock body_class %}"
-          data-controller=" notificaties--manager notificaties--toast-manager focus-trap modal"
+          data-controller=" notificaties--manager notificaties--toast-manager focus-trap modal infosheet "
           data-notificaties--manager-snack-overzicht-url-value="{% url 'snack_overzicht_stream' %}"
           data-notificaties--manager-url-value="{{ APP_MERCURE_PUBLIC_URL }}"
           data-notificaties--manager-topic-snack-value="/notificaties/snack/"
@@ -118,5 +118,8 @@
         {% endblock javascripts_end %}
         <div data-notificaties--toast-manager-target="herlaad"></div>
         {% include "snippets/modal_template.html" %}
+        <dialog class="infosheet" data-infosheet-target="infosheet">
+            <turbo-frame id="infosheet" data-infosheet-target="infosheetTurboframe"></turbo-frame>
+        </dialog>
     </body>
 </html>
