--- a/app/frontend/assets/styles/app.scss
+++ b/app/frontend/assets/styles/app.scss
@@ -18,6 +18,7 @@
 @import "./components/badges";
 @import "./components/details-summary";
 @import "./components/imageSlider";
+@import "./components/infosheet";
 @import "./components/navigation";
 @import "./components/page-beheer";
 @import "./components/page-error";
