Styling the infosheet ant btn-info

--- a/app/frontend/assets/styles/_base.scss
+++ b/app/frontend/assets/styles/_base.scss
@@ -757,6 +757,10 @@ body.no-js {
     margin-bottom: 1em !important;
 }
 
+.center {
+    text-align: center;
+}
+
 .display--flex {
     display: flex;
 }
