--- a/app/frontend/assets/styles/_theme.scss
+++ b/app/frontend/assets/styles/_theme.scss
@@ -31,6 +31,7 @@ $yellow-200: #fff9eb;
 $yellow-400: #fff1ce;
 $red-200: #fcf0f0;
 $red-400: #ffd5d5;
+$red-900: #d22d1f;
 $blue-100: #f7f9fa;
 $blue-200: #eaeef1;
 $blue-900: #104ccb;
