--- a/app/frontend/assets/styles/app.scss
+++ b/app/frontend/assets/styles/app.scss
@@ -29,4 +29,5 @@
 @import "./components/change-location";
 @import "./components/dashboard";
 @import "./components/sidesheet";
+@import "./components/content-taakr";
 @import "./components/details-list-with-map";
