--- a/app/frontend/assets/styles/components/_buttons.scss
+++ b/app/frontend/assets/styles/components/_buttons.scss
@@ -339,6 +339,9 @@ textarea {
 
         svg {
             vertical-align: sub;
+            path {
+                fill: $green-tint01 !important;
+            }
         }
     }
 
