--- a/app/apps/main/templates/melding/detail/taken_aanmaken.html
+++ b/app/apps/main/templates/melding/detail/taken_aanmaken.html
@@ -99,7 +99,7 @@
                                                                                class="form-check-input">
                                                                         <span>{{ taakr_taaktype.omschrijving }}</span>
                                                                     </label>
-                                                                    <button class="btn"
+                                                                    <button class="btn btn-textlink btn-info"
                                                                             data-action="infosheet#openInfosheet"
                                                                             data-infosheet-action-param="{% url 'taaktype_taakr' %}?taakapplicatie-taaktype-url={{ taakr_taaktype_links.taakapplicatie_taaktype_url }}">
                                                                         {% include "icons/info-filled.svg" %}
