--- a/app/frontend/assets/styles/components/_infosheet.scss
+++ b/app/frontend/assets/styles/components/_infosheet.scss
@@ -3,24 +3,21 @@ dialog.infosheet {
     box-sizing: border-box;
     inset: auto 0 0 0; /* Zorgt ervoor dat de dialog onderaan blijft */
     width: 100vw;
-    height: 100vh;
+    height: auto;
     max-width: 100vw;
-    max-height: 85vh;
     border: none;
     border-radius: 12px 12px 0 0;
     box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
     padding: 0;
     background: #fff;
     overflow: hidden;
-    margin: 2rem 0 0;
-    transform: translateY(100%);
-    transition:
-        transform $transition-duration-default $transition-ease-default,
-        visibility 0s linear 0.3s;
-    visibility: hidden;
+    margin: 0;
+    transform: translate3d(0, 100%, 0);
+    transition: transform $transition-duration-default $transition-ease-default;
     display: flex;
     flex-direction: column;
-    z-index: 2500;
+    z-index: 3000;
+    opacity: 1;
 
     &:has(> turbo-frame) {
         display: block;
@@ -28,16 +25,17 @@ dialog.infosheet {
         > turbo-frame {
             display: flex;
             flex-direction: column;
+            height: 100%;
         }
     }
 
     &[open] {
         transform: translateY(0);
-        opacity: 1;
-        visibility: visible;
-        transition:
-            transform $transition-duration-default ease-out,
-            visibility 0s linear;
+        transition: transform $transition-duration-default $transition-ease-default;
+
+        &.closing {
+            transform: translate3d(100%, 0, 0);
+        }
     }
 
     &::before {
@@ -92,6 +90,8 @@ dialog.infosheet {
         flex: 1;
         overflow-y: auto;
         overflow-x: hidden;
+        max-height: 67vh;
+        padding-bottom: 1em;
     }
 
     .scroll-handle {
@@ -104,14 +104,15 @@ dialog.infosheet {
 
     @media (min-width: map-get($grid-breakpoints, lg)) {
         inset: auto 0 0 auto;
-        width: 33%;
+        width: 38%;
+        height: 100vh;
         max-height: none;
         border-radius: 0;
-        transform: translateX(100%);
+        transform: translate3d(100%, 0, 0);
+        top: 0;
 
-        dialog[open] {
-            transform: translateX(0); /* Verschuif van rechts naar links */
-            visibility: visible;
+        .content {
+            max-height: none;
         }
         .scroll-handle,
         &::before {
@@ -120,7 +121,8 @@ dialog.infosheet {
     }
 }
 
-/* Backdrop for the dialog */
-dialog.infosheet::backdrop {
-    background-color: rgba(0, 0, 0, 0.5);
+dialog::backdrop {
+    background-color: rgba(0, 0, 0, 0.35);
+    position: relative;
+    z-index: 2900;
 }
