--- a/app/apps/main/templates/taaktype/taakr.html
+++ b/app/apps/main/templates/taaktype/taakr.html
@@ -42,7 +42,7 @@
             {% endif %}
             <h2 class="label--negative">Wanneer niet</h2>
             {% if taaktype.waarom_niet|length > 0 %}
-                <div class="container__slider-horizontal">
+                <div class="container__slider-horizontal {% if taaktype.waarom_niet|length < 2 %}single-item{% endif %}">
                     <ul class="list-slider">
                         {% for voorbeeldsituatie in taaktype.waarom_niet %}
                             <li class="container__explained">
