Removing 'onbekend' and 'None' for address, added padding to pagination

--- a/app/apps/main/templates/melding/detail/locatie_aanpassen.html
+++ b/app/apps/main/templates/melding/detail/locatie_aanpassen.html
@@ -99,7 +99,12 @@
                         </h3>
                         <div class="card">
                             <p>
-                                {{ locatie.straatnaam }} {{ locatie.huisnummer }}{{ locatie.huisletter }} {{ locatie.toevoeging }}
+                                {% if locatie.straatnaam %}
+                                    {{ locatie.straatnaam }}
+                                    {% if locatie.huisnummer %}{{ locatie.huisnummer }}{% endif %}
+                                    {% if locatie.huisletter %}{{ locatie.huisletter }}{% endif %}
+                                    {% if locatie.toevoeging %}{{ locatie.toevoeging }}{% endif %}
+                                {% endif %}
                                 <br>
                                 {{ locatie.wijknaam }} {{ locatie.buurtnaam }}
                                 <br>
