--- a/app/frontend/assets/styles/components/_navigation.scss
+++ b/app/frontend/assets/styles/components/_navigation.scss
@@ -35,6 +35,9 @@
         padding: 0.5em 1em 0.5em 2em;
         display: block;
         position: relative;
+        &::before {
+            content: none;
+        }
 
         svg {
             position: absolute;
@@ -74,6 +77,9 @@
         a {
             text-decoration: none;
             color: inherit;
+            &::before {
+                content: none;
+            }
         }
     }
     .btn,
