--- a/app/frontend/assets/styles/components/_notifications.scss
+++ b/app/frontend/assets/styles/components/_notifications.scss
@@ -391,6 +391,10 @@
                 padding: 0.2em 0.3em 0.1em;
                 border-radius: 4px;
 
+                &::before {
+                    content: none;
+                }
+
                 &:hover,
                 &:focus {
                     text-decoration: none;
