--- a/app/frontend/assets/styles/components/_tables.scss
+++ b/app/frontend/assets/styles/components/_tables.scss
@@ -96,6 +96,9 @@
         a {
             text-decoration: none;
             color: inherit;
+            &::before {
+                content: none;
+            }
         }
     }
 
