--- a/app/frontend/assets/styles/_base.scss
+++ b/app/frontend/assets/styles/_base.scss
@@ -290,7 +290,7 @@ summary:focus-visible {
 a,
 .link {
     color: $primary;
-    text-decoration: none;
+    text-decoration: $link-decoration;
     cursor: pointer;
     position: relative;
 
