--- a/app/frontend/assets/styles/components/_buttons.scss
+++ b/app/frontend/assets/styles/components/_buttons.scss
@@ -235,6 +235,7 @@ textarea {
                 width: 18px;
                 height: 18px;
                 pointer-events: none;
+                display: block;
                 path {
                     fill: $black;
                 }
