--- a/app/frontend/assets/styles/components/_infosheet.scss
+++ b/app/frontend/assets/styles/components/_infosheet.scss
@@ -3,7 +3,7 @@ dialog.infosheet {
     box-sizing: border-box;
     inset: auto 0 0 0; /* Zorgt ervoor dat de dialog onderaan blijft */
     width: 100vw;
-    height: auto;
+    height: 0;
     max-width: 100vw;
     border: none;
     border-radius: 12px 12px 0 0;
@@ -13,7 +13,9 @@ dialog.infosheet {
     overflow: hidden;
     margin: 0;
     transform: translate3d(0, 100%, 0);
-    transition: transform $transition-duration-default $transition-ease-default;
+    transition:
+        transform $transition-duration-default $transition-ease-default,
+        height $transition-duration-default $transition-ease-default;
     display: flex;
     flex-direction: column;
     z-index: 3000;
@@ -30,9 +32,11 @@ dialog.infosheet {
     }
 
     &[open] {
+        height: 90vh;
         transform: translate3d(0, 0, 0);
-        transition: transform $transition-duration-default $transition-ease-default;
-        visibility: visible;
+        transition:
+            transform $transition-duration-default $transition-ease-default,
+            height $transition-duration-default $transition-ease-default;
         opacity: 1;
 
         &.closing {
@@ -80,7 +84,7 @@ dialog.infosheet {
             display: inline-block;
             margin: 0 auto;
             color: currentColor;
-            font-size: 0.889em;
+            font-size: 0.889rem;
 
             svg {
                 width: 15px;
@@ -93,7 +97,6 @@ dialog.infosheet {
         flex: 1;
         overflow-y: auto;
         overflow-x: hidden;
-        max-height: 67vh;
         padding-bottom: 1em;
     }
 
@@ -115,6 +118,7 @@ dialog.infosheet {
         top: 0;
 
         &[open] {
+            height: 100vh;
             &.closing {
                 transform: translate3d(100%, 0, 0);
             }
